# meritz-new

./: .gitignore  build.gradle  dependencies.gradle  gradle.properties
app/: build-properties.json  build.gradle  dexguard-project.txt  google-services.json  proguard-project.txt  proguard-rules.pro
app/dexguard/DexGuard-9.2.7/: README
app/dexguard/DexGuard-9.2.7/cordova/: build-root.gradle  package.json  plugin.xml
app/dexguard/DexGuard-9.2.7/docs/: 404.html  NOTICE_LibTomMath  addons_overview.html  annotations.html  attributes.html  codepush.html  configuration.html  defaultconfigurations.html  examples.html  fingerprinting.html  index.html  java.html  (+23 more)
app/dexguard/DexGuard-9.2.7/samples/basic/NativeLibraryEncryption/: AndroidManifest.xml  CMakeLists.txt  build.gradle  dexguard-project.txt
app/dexguard/DexGuard-9.2.7/samples/basic/NativeLibraryEncryption/jni/: Android.mk  Application.mk  com_example_jni_NativeSecret.c
app/dexguard/DexGuard-9.2.7/samples/basic/NativeLibraryEncryption/libs/: dexguard-nativeloader.aar
app/dexguard/DexGuard-9.2.7/samples/basic/NativeLibraryEncryption/res/values/: strings.xml
app/dexguard/DexGuard-9.2.7/samples/basic/NativeLibraryEncryption/src/com/example/: HelloWorldActivity.java
app/dexguard/DexGuard-9.2.7/samples/basic/NativeLibraryEncryption/src/com/example/jni/: NativeSecret.java
app/keystore/: keystore.jks
app/libs/: Debug-Databasedebug-db-v1.0.7.aar  TimePickerWithSeconds-v1.0.1.aar  chatkit-v0.4.1.aar  rxrecycler-adapter-v1.3.2.aar
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
(+967 files in other folders)
